@@ -1,0 +1,6 @@
+YAP is a high-performance Prolog compiler developed at
+LIACC/Universidade do Porto and at COPPE Sistemas/UFRJ. Its Prolog
+engine is based in the WAM (Warren Abstract Machine), with several
+optimizations for better performance. YAP follows the Edinburgh
+tradition, and is largely compatible with the ISO-Prolog standard and
+with Quintus and SICStus Prolog.
